Compiler/Compiler Final Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    ILLEGAL
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt
Rule 3     stmt_list -> stmt_list stmt
Rule 4     stmt -> exp
Rule 5     stmt -> def_stmt
Rule 6     stmt -> print_stmt
Rule 7     print_stmt -> LPAREN PRINT_NUM exp RPAREN
Rule 8     print_stmt -> LPAREN PRINT_BOOL exp RPAREN
Rule 9     exp -> BOOL_VAL
Rule 10    exp -> number
Rule 11    exp -> variable
Rule 12    exp -> num_op
Rule 13    exp -> logical_op
Rule 14    exp -> fun_exp
Rule 15    exp -> fun_call
Rule 16    exp -> if_exp
Rule 17    number -> NUMBER
Rule 18    num_op -> LPAREN PLUS exp_list RPAREN
Rule 19    num_op -> LPAREN MINUS exp exp RPAREN
Rule 20    num_op -> LPAREN MULTIPLY exp_list RPAREN
Rule 21    num_op -> LPAREN DIVIDE exp exp RPAREN
Rule 22    num_op -> LPAREN MOD exp exp RPAREN
Rule 23    num_op -> LPAREN GREATER exp exp RPAREN
Rule 24    num_op -> LPAREN SMALLER exp exp RPAREN
Rule 25    num_op -> LPAREN EQUAL exp_list RPAREN
Rule 26    logical_op -> LPAREN AND exp_list RPAREN
Rule 27    logical_op -> LPAREN OR exp_list RPAREN
Rule 28    logical_op -> LPAREN NOT exp RPAREN
Rule 29    exp_list -> exp
Rule 30    exp_list -> exp_list exp
Rule 31    def_stmt -> LPAREN DEFINE ID exp RPAREN
Rule 32    variable -> ID
Rule 33    fun_call -> LPAREN fun_exp param_list RPAREN
Rule 34    fun_call -> LPAREN ID param_list RPAREN
Rule 35    fun_exp -> LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
Rule 36    fun_ids -> ID
Rule 37    fun_ids -> fun_ids ID
Rule 38    fun_ids -> empty
Rule 39    fun_body -> exp
Rule 40    param_list -> exp
Rule 41    param_list -> param_list exp
Rule 42    param_list -> empty
Rule 43    if_exp -> LPAREN IF test_exp then_exp else_exp RPAREN
Rule 44    test_exp -> exp
Rule 45    then_exp -> exp
Rule 46    else_exp -> exp
Rule 47    empty -> <empty>

Terminals, with rules where they appear

AND                  : 26
BOOL_VAL             : 9
DEFINE               : 31
DIVIDE               : 21
EQUAL                : 25
FALSE                : 
FUN                  : 35
GREATER              : 23
ID                   : 31 32 34 36 37
IF                   : 43
ILLEGAL              : 
LPAREN               : 7 8 18 19 20 21 22 23 24 25 26 27 28 31 33 34 35 35 43
MINUS                : 19
MOD                  : 22
MULTIPLY             : 20
NOT                  : 28
NUMBER               : 17
OR                   : 27
PLUS                 : 18
PRINT_BOOL           : 8
PRINT_NUM            : 7
RPAREN               : 7 8 18 19 20 21 22 23 24 25 26 27 28 31 33 34 35 35 43
SMALLER              : 24
TRUE                 : 
error                : 

Nonterminals, with rules where they appear

def_stmt             : 5
else_exp             : 43
empty                : 38 42
exp                  : 4 7 8 19 19 21 21 22 22 23 23 24 24 28 29 30 31 39 40 41 44 45 46
exp_list             : 18 20 25 26 27 30
fun_body             : 35
fun_call             : 15
fun_exp              : 14 33
fun_ids              : 35 37
if_exp               : 16
logical_op           : 13
num_op               : 12
number               : 10
param_list           : 33 34 41
print_stmt           : 6
program              : 0
stmt                 : 2 3
stmt_list            : 1 3
test_exp             : 43
then_exp             : 43
variable             : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt
    (3) stmt_list -> . stmt_list stmt
    (4) stmt -> . exp
    (5) stmt -> . def_stmt
    (6) stmt -> . print_stmt
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (31) def_stmt -> . LPAREN DEFINE ID exp RPAREN
    (7) print_stmt -> . LPAREN PRINT_NUM exp RPAREN
    (8) print_stmt -> . LPAREN PRINT_BOOL exp RPAREN
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    BOOL_VAL        shift and go to state 7
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 17
    ID              shift and go to state 16

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    exp                            shift and go to state 4
    def_stmt                       shift and go to state 5
    print_stmt                     shift and go to state 6
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (3) stmt_list -> stmt_list . stmt
    (4) stmt -> . exp
    (5) stmt -> . def_stmt
    (6) stmt -> . print_stmt
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (31) def_stmt -> . LPAREN DEFINE ID exp RPAREN
    (7) print_stmt -> . LPAREN PRINT_NUM exp RPAREN
    (8) print_stmt -> . LPAREN PRINT_BOOL exp RPAREN
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    $end            reduce using rule 1 (program -> stmt_list .)
    BOOL_VAL        shift and go to state 7
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 17
    ID              shift and go to state 16

    stmt                           shift and go to state 18
    exp                            shift and go to state 4
    def_stmt                       shift and go to state 5
    print_stmt                     shift and go to state 6
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 3

    (2) stmt_list -> stmt .

    BOOL_VAL        reduce using rule 2 (stmt_list -> stmt .)
    LPAREN          reduce using rule 2 (stmt_list -> stmt .)
    NUMBER          reduce using rule 2 (stmt_list -> stmt .)
    ID              reduce using rule 2 (stmt_list -> stmt .)
    $end            reduce using rule 2 (stmt_list -> stmt .)


state 4

    (4) stmt -> exp .

    BOOL_VAL        reduce using rule 4 (stmt -> exp .)
    LPAREN          reduce using rule 4 (stmt -> exp .)
    NUMBER          reduce using rule 4 (stmt -> exp .)
    ID              reduce using rule 4 (stmt -> exp .)
    $end            reduce using rule 4 (stmt -> exp .)


state 5

    (5) stmt -> def_stmt .

    BOOL_VAL        reduce using rule 5 (stmt -> def_stmt .)
    LPAREN          reduce using rule 5 (stmt -> def_stmt .)
    NUMBER          reduce using rule 5 (stmt -> def_stmt .)
    ID              reduce using rule 5 (stmt -> def_stmt .)
    $end            reduce using rule 5 (stmt -> def_stmt .)


state 6

    (6) stmt -> print_stmt .

    BOOL_VAL        reduce using rule 6 (stmt -> print_stmt .)
    LPAREN          reduce using rule 6 (stmt -> print_stmt .)
    NUMBER          reduce using rule 6 (stmt -> print_stmt .)
    ID              reduce using rule 6 (stmt -> print_stmt .)
    $end            reduce using rule 6 (stmt -> print_stmt .)


state 7

    (9) exp -> BOOL_VAL .

    BOOL_VAL        reduce using rule 9 (exp -> BOOL_VAL .)
    LPAREN          reduce using rule 9 (exp -> BOOL_VAL .)
    NUMBER          reduce using rule 9 (exp -> BOOL_VAL .)
    ID              reduce using rule 9 (exp -> BOOL_VAL .)
    $end            reduce using rule 9 (exp -> BOOL_VAL .)
    RPAREN          reduce using rule 9 (exp -> BOOL_VAL .)


state 8

    (10) exp -> number .

    BOOL_VAL        reduce using rule 10 (exp -> number .)
    LPAREN          reduce using rule 10 (exp -> number .)
    NUMBER          reduce using rule 10 (exp -> number .)
    ID              reduce using rule 10 (exp -> number .)
    $end            reduce using rule 10 (exp -> number .)
    RPAREN          reduce using rule 10 (exp -> number .)


state 9

    (11) exp -> variable .

    BOOL_VAL        reduce using rule 11 (exp -> variable .)
    LPAREN          reduce using rule 11 (exp -> variable .)
    NUMBER          reduce using rule 11 (exp -> variable .)
    ID              reduce using rule 11 (exp -> variable .)
    $end            reduce using rule 11 (exp -> variable .)
    RPAREN          reduce using rule 11 (exp -> variable .)


state 10

    (12) exp -> num_op .

    BOOL_VAL        reduce using rule 12 (exp -> num_op .)
    LPAREN          reduce using rule 12 (exp -> num_op .)
    NUMBER          reduce using rule 12 (exp -> num_op .)
    ID              reduce using rule 12 (exp -> num_op .)
    $end            reduce using rule 12 (exp -> num_op .)
    RPAREN          reduce using rule 12 (exp -> num_op .)


state 11

    (13) exp -> logical_op .

    BOOL_VAL        reduce using rule 13 (exp -> logical_op .)
    LPAREN          reduce using rule 13 (exp -> logical_op .)
    NUMBER          reduce using rule 13 (exp -> logical_op .)
    ID              reduce using rule 13 (exp -> logical_op .)
    $end            reduce using rule 13 (exp -> logical_op .)
    RPAREN          reduce using rule 13 (exp -> logical_op .)


state 12

    (14) exp -> fun_exp .

    BOOL_VAL        reduce using rule 14 (exp -> fun_exp .)
    LPAREN          reduce using rule 14 (exp -> fun_exp .)
    NUMBER          reduce using rule 14 (exp -> fun_exp .)
    ID              reduce using rule 14 (exp -> fun_exp .)
    $end            reduce using rule 14 (exp -> fun_exp .)
    RPAREN          reduce using rule 14 (exp -> fun_exp .)


state 13

    (15) exp -> fun_call .

    BOOL_VAL        reduce using rule 15 (exp -> fun_call .)
    LPAREN          reduce using rule 15 (exp -> fun_call .)
    NUMBER          reduce using rule 15 (exp -> fun_call .)
    ID              reduce using rule 15 (exp -> fun_call .)
    $end            reduce using rule 15 (exp -> fun_call .)
    RPAREN          reduce using rule 15 (exp -> fun_call .)


state 14

    (16) exp -> if_exp .

    BOOL_VAL        reduce using rule 16 (exp -> if_exp .)
    LPAREN          reduce using rule 16 (exp -> if_exp .)
    NUMBER          reduce using rule 16 (exp -> if_exp .)
    ID              reduce using rule 16 (exp -> if_exp .)
    $end            reduce using rule 16 (exp -> if_exp .)
    RPAREN          reduce using rule 16 (exp -> if_exp .)


state 15

    (31) def_stmt -> LPAREN . DEFINE ID exp RPAREN
    (7) print_stmt -> LPAREN . PRINT_NUM exp RPAREN
    (8) print_stmt -> LPAREN . PRINT_BOOL exp RPAREN
    (18) num_op -> LPAREN . PLUS exp_list RPAREN
    (19) num_op -> LPAREN . MINUS exp exp RPAREN
    (20) num_op -> LPAREN . MULTIPLY exp_list RPAREN
    (21) num_op -> LPAREN . DIVIDE exp exp RPAREN
    (22) num_op -> LPAREN . MOD exp exp RPAREN
    (23) num_op -> LPAREN . GREATER exp exp RPAREN
    (24) num_op -> LPAREN . SMALLER exp exp RPAREN
    (25) num_op -> LPAREN . EQUAL exp_list RPAREN
    (26) logical_op -> LPAREN . AND exp_list RPAREN
    (27) logical_op -> LPAREN . OR exp_list RPAREN
    (28) logical_op -> LPAREN . NOT exp RPAREN
    (35) fun_exp -> LPAREN . FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> LPAREN . fun_exp param_list RPAREN
    (34) fun_call -> LPAREN . ID param_list RPAREN
    (43) if_exp -> LPAREN . IF test_exp then_exp else_exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN

    DEFINE          shift and go to state 20
    PRINT_NUM       shift and go to state 22
    PRINT_BOOL      shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    MULTIPLY        shift and go to state 26
    DIVIDE          shift and go to state 27
    MOD             shift and go to state 28
    GREATER         shift and go to state 29
    SMALLER         shift and go to state 30
    EQUAL           shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33
    NOT             shift and go to state 34
    FUN             shift and go to state 35
    ID              shift and go to state 21
    IF              shift and go to state 37
    LPAREN          shift and go to state 19

    fun_exp                        shift and go to state 36

state 16

    (32) variable -> ID .

    BOOL_VAL        reduce using rule 32 (variable -> ID .)
    LPAREN          reduce using rule 32 (variable -> ID .)
    NUMBER          reduce using rule 32 (variable -> ID .)
    ID              reduce using rule 32 (variable -> ID .)
    $end            reduce using rule 32 (variable -> ID .)
    RPAREN          reduce using rule 32 (variable -> ID .)


state 17

    (17) number -> NUMBER .

    BOOL_VAL        reduce using rule 17 (number -> NUMBER .)
    LPAREN          reduce using rule 17 (number -> NUMBER .)
    NUMBER          reduce using rule 17 (number -> NUMBER .)
    ID              reduce using rule 17 (number -> NUMBER .)
    $end            reduce using rule 17 (number -> NUMBER .)
    RPAREN          reduce using rule 17 (number -> NUMBER .)


state 18

    (3) stmt_list -> stmt_list stmt .

    BOOL_VAL        reduce using rule 3 (stmt_list -> stmt_list stmt .)
    LPAREN          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    NUMBER          reduce using rule 3 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 3 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt_list stmt .)


state 19

    (35) fun_exp -> LPAREN . FUN LPAREN fun_ids RPAREN fun_body RPAREN

    FUN             shift and go to state 35


state 20

    (31) def_stmt -> LPAREN DEFINE . ID exp RPAREN

    ID              shift and go to state 38


state 21

    (34) fun_call -> LPAREN ID . param_list RPAREN
    (40) param_list -> . exp
    (41) param_list -> . param_list exp
    (42) param_list -> . empty
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (47) empty -> .
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

  ! shift/reduce conflict for BOOL_VAL resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    BOOL_VAL        shift and go to state 7
    RPAREN          reduce using rule 47 (empty -> .)
    NUMBER          shift and go to state 17
    ID              shift and go to state 16
    LPAREN          shift and go to state 39

  ! BOOL_VAL        [ reduce using rule 47 (empty -> .) ]
  ! NUMBER          [ reduce using rule 47 (empty -> .) ]
  ! ID              [ reduce using rule 47 (empty -> .) ]
  ! LPAREN          [ reduce using rule 47 (empty -> .) ]

    param_list                     shift and go to state 40
    exp                            shift and go to state 41
    empty                          shift and go to state 42
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 22

    (7) print_stmt -> LPAREN PRINT_NUM . exp RPAREN
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 17
    ID              shift and go to state 16
    LPAREN          shift and go to state 39

    exp                            shift and go to state 43
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 23

    (8) print_stmt -> LPAREN PRINT_BOOL . exp RPAREN
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 17
    ID              shift and go to state 16
    LPAREN          shift and go to state 39

    exp                            shift and go to state 44
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 24

    (18) num_op -> LPAREN PLUS . exp_list RPAREN
    (29) exp_list -> . exp
    (30) exp_list -> . exp_list exp
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 17
    ID              shift and go to state 16
    LPAREN          shift and go to state 39

    exp_list                       shift and go to state 45
    exp                            shift and go to state 46
    number                         shift and go to state 8
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14

state 25

    (19) num_op -> LPAREN MINUS . exp exp RPAREN
    (9) exp -> . BOOL_VAL
    (10) exp -> . number
    (11) exp -> . variable
    (12) exp -> . num_op
    (13) exp -> . logical_op
    (14) exp -> . fun_exp
    (15) exp -> . fun_call
    (16) exp -> . if_exp
    (17) number -> . NUMBER
    (32) variable -> . ID
    (18) num_op -> . LPAREN PLUS exp_list RPAREN
    (19) num_op -> . LPAREN MINUS exp exp RPAREN
    (20) num_op -> . LPAREN MULTIPLY exp_list RPAREN
    (21) num_op -> . LPAREN DIVIDE exp exp RPAREN
    (22) num_op -> . LPAREN MOD exp exp RPAREN
    (23) num_op -> . LPAREN GREATER exp exp RPAREN
    (24) num_op -> . LPAREN SMALLER exp exp RPAREN
    (25) num_op -> . LPAREN EQUAL exp_list RPAREN
    (26) logical_op -> . LPAREN AND exp_list RPAREN
    (27) logical_op -> . LPAREN OR exp_list RPAREN
    (28) logical_op -> . LPAREN NOT exp RPAREN
    (35) fun_exp -> . LPAREN FUN LPAREN fun_ids RPAREN fun_body RPAREN
    (33) fun_call -> . LPAREN fun_exp param_list RPAREN
    (34) fun_call -> . LPAREN ID param_list RPAREN
    (43) if_exp -> . LPAREN IF test_exp then_exp else_exp RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 17
    ID              shift and go to state 16
    LPAREN          shift and go to state 39
